--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -12,33 +12,33 @@ jobs:
         run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: docker push
         run: docker push dalbezh/skywars_app:$GITHUB_REF_NAME-$GITHUB_RUN_ID
-#deploy:
-#  runs-on: ubuntu-latest
-#  needs: build_and_push
-#  steps:
-#    - name: clone code
-#      uses: actions/checkout@v2
-#    - name: render configs
-#      run: |
-#        mkdir deploy
-#        cat docker-compose_ci.yaml | envsubst > deploy/docker-compose.yml
-#    - name: copy files to server
-#      uses: appleboy/scp-action@master
-#      with:
-#        host: ${{ secrets.HOST }}
-#        username: ${{ secrets.USERNAME }}
-#        key: ${{ secrets.KEY }}
-#        port: ${{ secrets.PORT }}
-#        source: "deploy/docker-compose.yml"
-#        target: "deploy"
-#        strip_components: 1
-#    - name: deploy app
-#      uses: appleboy/ssh-action@v0.1.8
-#      with:
-#        host: ${{ secrets.HOST }}
-#        username: ${{ secrets.USERNAME }}
-#        key: ${{ secrets.KEY }}
-#        port: ${{ secrets.PORT }}
-#        script: |
-#          cd deploy
-#          echo ${{ secrets.PASSWORD }} | sudo -S docker compose up -d
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push
+    steps:
+      - name: clone code
+        uses: actions/checkout@v2
+      - name: render configs
+        run: |
+          mkdir deploy
+          cat docker-compose_cd.yaml | envsubst > deploy/docker-compose_skywars.yml
+      - name: copy files to server
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.HOST_USERNAME }}
+          key: ${{ secrets.HOST_KEY }}
+          port: ${{ secrets.HOST_PORT }}
+          source: "deploy/docker-compose_skywars.yml"
+          target: "deploy"
+          strip_components: 1
+      - name: deploy app
+        uses: appleboy/ssh-action@v0.1.8
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.HOST_USERNAME }}
+          key: ${{ secrets.HOST_KEY }}
+          port: ${{ secrets.HOST_PORT }}
+          script: |
+            cd deploy
+            echo ${{ secrets.DEPLOY_PASSWORD }} | sudo -S docker compose -f docker-compose_skywars.yml up -d
