--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -23,7 +23,7 @@ jobs:
       - name: render configs
         run: |
           mkdir deploy
-          cat docker-compose_cd.yaml | envsubst > deploy/docker-compose_skywars.yml
+          cat infra/docker-compose_cd.yaml | envsubst > deploy/docker-compose_skywars.yml
       - name: copy files to server
         uses: appleboy/scp-action@master
         with:
