--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -31,7 +31,7 @@ jobs:
           username: ${{ secrets.HOST_USERNAME }}
           key: ${{ secrets.HOST_KEY }}
           port: ${{ secrets.HOST_PORT }}
-          source: "deploy/docker-compose_skywars.yml,nginx.conf"
+          source: "deploy/docker-compose_skywars.yml,infra/nginx.conf"
           target: "deploy"
           strip_components: 1
       - name: deploy app
