refactoring poject. moved to a separate directory. docker settings

--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -1,9 +1,12 @@
 version: '3.8'
+name: dull-wars
 
 services:
 
   app:
     build: ../
+    command: >
+      sh -c "python wsgi.py"
     restart: always
 
   nginx:
